--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PUSHOVER_TOKEN=your_pushover_app_token
 PUSHOVER_USER=your_pushover_user_key
 DOWNLOAD_FOLDER=./downloads
 LOG_FILE=kindle_watcher.log
+CREDENTIALS_PATH=credentials.json
+TOKEN_PATH=token.json
